Finished second part of tutorial.
