# swagger.yml
@@ -2,54 +2,49 @@ swagger: "2.0"
 info:
   description: This is the swagger file that goes with our server code
   version: "1.0.0"
-  title: Swagger REST Article
+  title: Swagger Rest Article
 consumes:
   - application/json
 produces:
   - application/json
 
-basePath: "/api"
+basePath: /api
 
 # Paths supported by the server application
 paths:
   /people:
     get:
-      operationId: controllers.people.read_all
+      operationId: people_controller.read_all
       tags:
         - People
-      summary: Read the entire list of people
-      description: Read the list of people
-      parameters:
-        - name: length
-          in: query
-          type: integer
-          description: Number of people to get from people
-          required: false
-        - name: offset
-          in: query
-          type: integer
-          description: Offset from beginning of list where to start gathering people
-          required: false
+      summary: Read the entire set of people, sorted by last name
+      description: Read the entire set of people, sorted by last name
       responses:
         200:
-          description: Successfully read people list operation
+          description: Successfully read people set operation
           schema:
             type: array
             items:
               properties:
+                person_id:
+                  type: string
+                  description: Id of the person
                 fname:
                   type: string
+                  description: First name of the person
                 lname:
                   type: string
+                  description: Last name of the person
                 timestamp:
                   type: string
+                  description: Creation/Update timestamp of the person
 
     post:
-      operationId: controllers.people.create
+      operationId: people_controller.create
       tags:
         - People
-      summary: Create a person and add it to the people list
-      description: Create a new person in the people list
+      summary: Create a person
+      description: Create a new person
       parameters:
         - name: person
           in: body
@@ -66,44 +61,65 @@ paths:
                 description: Last name of person to create
       responses:
         201:
-          description: Successfully created person in list
+          description: Successfully created person
+          schema:
+            properties:
+              person_id:
+                type: string
+                description: Id of the person
+              fname:
+                type: string
+                description: First name of the person
+              lname:
+                type: string
+                description: Last name of the person
+              timestamp:
+                type: string
+                description: Creation/Update timestamp of the person record
 
-  /people/{lname}:
+  /people/{person_id}:
     get:
-      operationId: controllers.people.read_one
+      operationId: people_controller.read_one
       tags:
         - People
-      summary: Read one person from the people list
-      description: Read one person from the people list
+      summary: Read one person
+      description: Read one person
       parameters:
-        - name: lname
+        - name: person_id
           in: path
-          description: Last name of the person to get from the list
-          type: string
+          description: Id of the person to get
+          type: integer
           required: True
       responses:
         200:
-          description: Successfully read person from people list operation
+          description: Successfully read person from people data operation
           schema:
+            type: object
             properties:
+              person_id:
+                type: string
+                description: Id of the person
               fname:
                 type: string
+                description: First name of the person
               lname:
                 type: string
+                description: Last name of the person
               timestamp:
                 type: string
+                description: Creation/Update timestamp of the person record
 
     put:
-      operationId: controllers.people.update
+      operationId: people_controller.update
       tags:
         - People
-      summary: Update a person in the people list
-      description: Update a person in the people list
+      summary: Update a person
+      description: Update a person
       parameters:
-        - name: lname
+        - name: person_id
           in: path
-          description: Last name of the person to update in the list
-          type: string
+          description: Id the person to update
+          type: integer
           required: True
         - name: person
           in: body
@@ -112,23 +128,40 @@ paths:
             properties:
               fname:
                 type: string
+                description: First name of the person
               lname:
                 type: string
+                description: Last name of the person
       responses:
         200:
-          description: Successfully updated person in people list
+          description: Successfully updated person
+          schema:
+            properties:
+              person_id:
+                type: string
+                description: Id of the person in the database
+              fname:
+                type: string
+                description: First name of the person
+              lname:
+                type: string
+                description: Last name of the person
+              timestamp:
+                type: string
+                description: Creation/Update timestamp of the person record
 
     delete:
-      operationId: controllers.people.delete
+      operationId: people_controller.delete
       tags:
         - People
       summary: Delete a person from the people list
       description: Delete a person
       parameters:
-        - name: lname
+        - name: person_id
           in: path
-          type: string
-          required: True
+          type: integer
+          description: Id of the person to delete
+          required: true
       responses:
         200:
-          description: Successfully deleted a person from people list
+          description: Successfully deleted a person
